# videohosting-fastapi

./: .editorconfig  .env-example  .gitignore  api.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  setup.cfg  sqlite.db
.github/workflows/: checks.yml
app/: __main__.py  app.py  db.py  settings.py
app/templates/: index.html
app/user/: models.py
app/video/: api.py  models.py  schemas.py  services.py
user/: models.py
video/: api.py  models.py  schemas.py
