[tool.poetry]
name = "videohosting"
version = "0.1.0"
description = ""
authors = ["garet2gis <br-avm32@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
aiosqlite = "0.17.0"
anyio = "3.5.0"
asgiref = "3.5.0"
certifi = "2021.10.8"
charset-normalizer = "2.0.12"
click = "8.1.2"
databases = "0.5.5"
dnspython = "2.2.1"
email-validator = "1.2.0"
fastapi = "0.75.2"
h11 = "0.13.0"
httptools = "0.4.0"
idna = "3.3"
itsdangerous = "2.1.2"
Jinja2 = "3.1.1"
MarkupSafe = "2.1.1"
mypy-extensions = "0.4.3"
orjson = "3.6.8"
ormar = "0.11.0"
pydantic = "1.9.0"
python-dotenv = "0.20.0"
python-multipart = "0.0.5"
PyYAML = "6.0"
requests = "2.27.1"
six = "1.16.0"
sniffio = "1.2.0"
SQLAlchemy = "1.4.31"
starlette = "0.17.1"
tomli = "2.0.1"
typing-extensions = "4.2.0"
ujson = "5.2.0"
urllib3 = "1.26.9"
uvicorn = "0.17.6"
uvloop = "0.16.0"
watchgod = "0.8.2"
websockets = "10.3"
flake8-commas = "^2.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-bugbear = "^22.4.25"
flake8-builtins = "^1.5.3"
pep8-naming = "^0.12.1"
flake8-variables-names = "^0.0.5"
flake8-import-order = "^0.18.1"
flake8-quotes = "^3.3.1"
flake8-annotations = "^2.9.0"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
